--- a/portfolio/CSA/app/css/last.css
+++ b/portfolio/CSA/app/css/last.css
@@ -89,13 +89,8 @@
       #last_page .container .slider2 .slide {
         margin: 0 15px;
         height: 500px;
-        background: #dddddd;
         position: relative;
         outline: none; }
-        #last_page .container .slider2 .slide p {
-          color: #000;
-          font-size: 10em;
-          text-align: center; }
       #last_page .container .slider2 .slide1 {
         position: relative; }
         #last_page .container .slider2 .slide1 span {
@@ -106,16 +101,391 @@
           cursor: pointer;
           -webkit-transition: .1s;
           -o-transition: .1s;
-          transition: .1s; }
+          transition: .1s;
+          z-index: 2; }
         #last_page .container .slider2 .slide1 .arrow_left_slide1 {
           left: 0;
           background: url(../img/arrow_left.png) no-repeat center center;
-          background-color: rgba(0, 0, 0, 0.3); }
+          background-color: rgba(0, 0, 0, 0.5); }
           #last_page .container .slider2 .slide1 .arrow_left_slide1:hover {
-            background-color: rgba(0, 0, 0, 0.5); }
+            background-color: rgba(0, 0, 0, 0.7); }
         #last_page .container .slider2 .slide1 .arrow_right_slide1 {
           right: 0;
           background: url(../img/arrow_right.png) no-repeat center center;
-          background-color: rgba(0, 0, 0, 0.3); }
+          background-color: rgba(0, 0, 0, 0.5); }
           #last_page .container .slider2 .slide1 .arrow_right_slide1:hover {
-            background-color: rgba(0, 0, 0, 0.5); }
+            background-color: rgba(0, 0, 0, 0.7); }
+        #last_page .container .slider2 .slide1 .bottom {
+          position: absolute;
+          bottom: 0;
+          left: 40px;
+          cursor: default;
+          width: -webkit-calc(100% - 80px);
+          width: calc(100% - 80px);
+          height: 64px;
+          background-color: rgba(0, 0, 0, 0.5);
+          display: -webkit-box;
+          display: -webkit-flex;
+          display: -ms-flexbox;
+          display: flex;
+          -webkit-box-pack: justify;
+          -webkit-justify-content: space-between;
+              -ms-flex-pack: justify;
+                  justify-content: space-between;
+          -webkit-box-align: center;
+          -webkit-align-items: center;
+              -ms-flex-align: center;
+                  align-items: center; }
+          #last_page .container .slider2 .slide1 .bottom .left {
+            font: 1.2em "HelveticaNeueCyrBold";
+            color: #fff; }
+          #last_page .container .slider2 .slide1 .bottom img {
+            width: 40px;
+            height: 40px;
+            position: absolute;
+            left: 50%;
+            -webkit-transform: translateX(-50%);
+                -ms-transform: translateX(-50%);
+                    transform: translateX(-50%); }
+          #last_page .container .slider2 .slide1 .bottom .right {
+            font: 1.2em "HelveticaNeueCyrMedium";
+            color: #fff; }
+        #last_page .container .slider2 .slide1 .bottom_line {
+          position: absolute;
+          width: 100%;
+          bottom: 0;
+          left: 0;
+          height: 3px;
+          background: #f5ed4a; }
+        #last_page .container .slider2 .slide1 .slider_news .slide {
+          margin: 0;
+          background: url(../img/Bg_news_block.jpg) no-repeat center center;
+          -webkit-background-size: cover;
+                  background-size: cover; }
+          #last_page .container .slider2 .slide1 .slider_news .slide a {
+            display: block;
+            width: 100%;
+            outline: none;
+            height: 100%;
+            font: 3.6em "HelveticaNeueCyrBold";
+            color: #fff;
+            text-decoration: none;
+            display: -webkit-box;
+            display: -webkit-flex;
+            display: -ms-flexbox;
+            display: flex;
+            -webkit-box-align: end;
+            -webkit-align-items: flex-end;
+                -ms-flex-align: end;
+                    align-items: flex-end;
+            -webkit-box-pack: end;
+            -webkit-justify-content: flex-end;
+                -ms-flex-pack: end;
+                    justify-content: flex-end; }
+            #last_page .container .slider2 .slide1 .slider_news .slide a h6 {
+              text-align: right;
+              padding-right: 55px;
+              padding-bottom: 79px;
+              margin: 0; }
+              #last_page .container .slider2 .slide1 .slider_news .slide a h6 strong {
+                color: #f4ea48; }
+      #last_page .container .slider2 .slide3 {
+        display: -webkit-box;
+        display: -webkit-flex;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+        -webkit-flex-direction: column;
+            -ms-flex-direction: column;
+                flex-direction: column;
+        -webkit-box-pack: justify;
+        -webkit-justify-content: space-between;
+            -ms-flex-pack: justify;
+                justify-content: space-between; }
+        #last_page .container .slider2 .slide3 .banner {
+          outline: none;
+          width: 100%;
+          height: 30%;
+          position: relative; }
+          #last_page .container .slider2 .slide3 .banner a {
+            display: block;
+            width: 100%;
+            height: 100%;
+            background: url(../img/Block3_banner.jpg) no-repeat center center;
+            -webkit-background-size: cover;
+                    background-size: cover;
+            outline: none; }
+          #last_page .container .slider2 .slide3 .banner .title {
+            position: absolute;
+            left: 0;
+            top: 0;
+            height: 100%;
+            width: 15%;
+            background: rgba(0, 0, 0, 0.8);
+            display: -webkit-box;
+            display: -webkit-flex;
+            display: -ms-flexbox;
+            display: flex;
+            -webkit-box-orient: vertical;
+            -webkit-box-direction: normal;
+            -webkit-flex-direction: column;
+                -ms-flex-direction: column;
+                    flex-direction: column;
+            -webkit-box-align: center;
+            -webkit-align-items: center;
+                -ms-flex-align: center;
+                    align-items: center;
+            -webkit-box-pack: center;
+            -webkit-justify-content: center;
+                -ms-flex-pack: center;
+                    justify-content: center; }
+            #last_page .container .slider2 .slide3 .banner .title .calc {
+              display: block;
+              width: 80%;
+              height: 40px;
+              background: url(../img/calc.png) no-repeat center center;
+              -webkit-background-size: contain;
+                      background-size: contain; }
+            #last_page .container .slider2 .slide3 .banner .title img {
+              width: 40px;
+              height: 40px; }
+            #last_page .container .slider2 .slide3 .banner .title .top {
+              font: 1.4em "HelveticaNeueCyrMedium";
+              color: #f4ea48;
+              margin: 0;
+              padding: 15px 0; }
+            #last_page .container .slider2 .slide3 .banner .title .bottom {
+              font: 2.2em "HelveticaNeueCyrMedium";
+              color: #fff;
+              margin: 0; }
+        #last_page .container .slider2 .slide3 .slider3 {
+          margin: 0 -15px; }
+          #last_page .container .slider2 .slide3 .slider3 .slide {
+            height: 335px;
+            overflow: hidden; }
+          #last_page .container .slider2 .slide3 .slider3 .var1 .img,
+          #last_page .container .slider2 .slide3 .slider3 .var2 .img {
+            height: 50%;
+            position: relative; }
+            #last_page .container .slider2 .slide3 .slider3 .var1 .img img,
+            #last_page .container .slider2 .slide3 .slider3 .var2 .img img {
+              height: 100%;
+              min-width: 100%;
+              width: auto;
+              position: absolute;
+              left: 50%;
+              -webkit-transform: translateX(-50%);
+                  -ms-transform: translateX(-50%);
+                      transform: translateX(-50%); }
+          #last_page .container .slider2 .slide3 .slider3 .var1 .txt,
+          #last_page .container .slider2 .slide3 .slider3 .var2 .txt {
+            height: 50%;
+            background: rgba(0, 0, 0, 0.7);
+            position: relative; }
+            #last_page .container .slider2 .slide3 .slider3 .var1 .txt p,
+            #last_page .container .slider2 .slide3 .slider3 .var2 .txt p {
+              text-align: center; }
+            #last_page .container .slider2 .slide3 .slider3 .var1 .txt h6,
+            #last_page .container .slider2 .slide3 .slider3 .var2 .txt h6 {
+              font: 1.5em "HelveticaNeueCyrRoman";
+              margin: 0;
+              text-transform: uppercase;
+              text-align: center;
+              color: #fff;
+              padding-top: 0.6em; }
+              #last_page .container .slider2 .slide3 .slider3 .var1 .txt h6 strong,
+              #last_page .container .slider2 .slide3 .slider3 .var2 .txt h6 strong {
+                font-family: "HelveticaNeueCyrBold"; }
+            #last_page .container .slider2 .slide3 .slider3 .var1 .txt .first,
+            #last_page .container .slider2 .slide3 .slider3 .var2 .txt .first {
+              font: 1.2em "HelveticaNeueCyrMedium";
+              color: #f4ea48;
+              text-transform: uppercase;
+              margin: 0;
+              padding: 0.5em 0; }
+            #last_page .container .slider2 .slide3 .slider3 .var1 .txt .title,
+            #last_page .container .slider2 .slide3 .slider3 .var2 .txt .title {
+              font: 1.2em "HelveticaNeueCyrMedium";
+              color: #f4ea48;
+              margin: 0; }
+            #last_page .container .slider2 .slide3 .slider3 .var1 .txt .desc,
+            #last_page .container .slider2 .slide3 .slider3 .var2 .txt .desc {
+              font: 1.4em "HelveticaNeueCyrMedium";
+              color: #fff;
+              margin: 0;
+              text-transform: uppercase;
+              padding-bottom: 0.5em; }
+            #last_page .container .slider2 .slide3 .slider3 .var1 .txt .line,
+            #last_page .container .slider2 .slide3 .slider3 .var2 .txt .line {
+              display: block;
+              height: 3px;
+              position: absolute;
+              width: 100%;
+              background: #f4ea48;
+              bottom: 0; }
+          #last_page .container .slider2 .slide3 .slider3 .var2 .txt h6 {
+            padding-top: 0.9em;
+            padding-bottom: 0.7em; }
+      #last_page .container .slider2 .slide4 .content {
+        display: -webkit-box;
+        display: -webkit-flex;
+        display: -ms-flexbox;
+        display: flex;
+        height: 100%;
+        -webkit-box-pack: justify;
+        -webkit-justify-content: space-between;
+            -ms-flex-pack: justify;
+                justify-content: space-between; }
+        #last_page .container .slider2 .slide4 .content .left_block, #last_page .container .slider2 .slide4 .content .right_block {
+          width: 28%;
+          background: #fff;
+          height: 100%; }
+        #last_page .container .slider2 .slide4 .content .center_block {
+          width: 40%;
+          height: 100%; }
+          #last_page .container .slider2 .slide4 .content .center_block h5 {
+            font: 3em "HelveticaNeueCyrBold";
+            color: #fff;
+            margin: 0;
+            text-align: center;
+            padding-bottom: 0.3em; }
+          #last_page .container .slider2 .slide4 .content .center_block .date {
+            font: 1.2em "HelveticaNeueCyrMedium";
+            color: #f5ed4a;
+            margin: 0;
+            padding-bottom: 1em;
+            text-align: center; }
+          #last_page .container .slider2 .slide4 .content .center_block .head {
+            position: relative;
+            display: -webkit-box;
+            display: -webkit-flex;
+            display: -ms-flexbox;
+            display: flex;
+            height: 30px;
+            -webkit-box-align: center;
+            -webkit-align-items: center;
+                -ms-flex-align: center;
+                    align-items: center; }
+            #last_page .container .slider2 .slide4 .content .center_block .head .option {
+              font: 1em "HelveticaNeueCyrMedium";
+              color: #f5ed4a;
+              text-transform: uppercase;
+              cursor: pointer;
+              text-align: center; }
+            #last_page .container .slider2 .slide4 .content .center_block .head .option1 {
+              width: 15%; }
+            #last_page .container .slider2 .slide4 .content .center_block .head .option2 {
+              width: 25%; }
+            #last_page .container .slider2 .slide4 .content .center_block .head .option3 {
+              width: 10%; }
+            #last_page .container .slider2 .slide4 .content .center_block .head .option5, #last_page .container .slider2 .slide4 .content .center_block .head .option4 {
+              width: 25%; }
+            #last_page .container .slider2 .slide4 .content .center_block .head .line {
+              display: block;
+              height: 3px;
+              width: 100%;
+              position: absolute;
+              background: #f5ed4a;
+              bottom: 0; }
+          #last_page .container .slider2 .slide4 .content .center_block .arrow_bottom {
+            position: absolute;
+            bottom: 0;
+            cursor: pointer;
+            display: block;
+            background: url(../img/arrow_bottom.png);
+            width: 32px;
+            height: 17px;
+            left: 50%;
+            -webkit-transform: translateX(-50%);
+                -ms-transform: translateX(-50%);
+                    transform: translateX(-50%); }
+          #last_page .container .slider2 .slide4 .content .center_block .slider_statistic {
+            margin: 0 -15px; }
+            #last_page .container .slider2 .slide4 .content .center_block .slider_statistic .slide {
+              border-top: 1px solid #fff;
+              height: 40px;
+              -webkit-box-sizing: border-box;
+                      box-sizing: border-box;
+              margin: -1px 15px;
+              display: -webkit-box;
+              display: -webkit-flex;
+              display: -ms-flexbox;
+              display: flex;
+              -webkit-box-align: center;
+              -webkit-align-items: center;
+                  -ms-flex-align: center;
+                      align-items: center; }
+              #last_page .container .slider2 .slide4 .content .center_block .slider_statistic .slide .slide_content {
+                display: -webkit-box;
+                display: -webkit-flex;
+                display: -ms-flexbox;
+                display: flex;
+                -webkit-box-align: center;
+                -webkit-align-items: center;
+                    -ms-flex-align: center;
+                        align-items: center;
+                width: 100%; }
+                #last_page .container .slider2 .slide4 .content .center_block .slider_statistic .slide .slide_content .number {
+                  display: -webkit-box;
+                  display: -webkit-flex;
+                  display: -ms-flexbox;
+                  display: flex;
+                  -webkit-box-pack: center;
+                  -webkit-justify-content: center;
+                      -ms-flex-pack: center;
+                          justify-content: center;
+                  width: 15%; }
+                  #last_page .container .slider2 .slide4 .content .center_block .slider_statistic .slide .slide_content .number p {
+                    font: 0.9em "HelveticaNeueCyrMedium";
+                    color: #fff; }
+                #last_page .container .slider2 .slide4 .content .center_block .slider_statistic .slide .slide_content .team {
+                  display: -webkit-box;
+                  display: -webkit-flex;
+                  display: -ms-flexbox;
+                  display: flex;
+                  -webkit-box-pack: center;
+                  -webkit-justify-content: center;
+                      -ms-flex-pack: center;
+                          justify-content: center;
+                  width: 25%; }
+                  #last_page .container .slider2 .slide4 .content .center_block .slider_statistic .slide .slide_content .team p {
+                    font: 0.9em "HelveticaNeueCyrBold";
+                    color: #fff;
+                    text-transform: uppercase;
+                    white-space: nowrap;
+                    padding-left: 10px; }
+                #last_page .container .slider2 .slide4 .content .center_block .slider_statistic .slide .slide_content .game {
+                  display: -webkit-box;
+                  display: -webkit-flex;
+                  display: -ms-flexbox;
+                  display: flex;
+                  -webkit-box-pack: center;
+                  -webkit-justify-content: center;
+                      -ms-flex-pack: center;
+                          justify-content: center;
+                  width: 10%; }
+                #last_page .container .slider2 .slide4 .content .center_block .slider_statistic .slide .slide_content .money {
+                  display: -webkit-box;
+                  display: -webkit-flex;
+                  display: -ms-flexbox;
+                  display: flex;
+                  -webkit-box-pack: center;
+                  -webkit-justify-content: center;
+                      -ms-flex-pack: center;
+                          justify-content: center;
+                  width: 25%; }
+                  #last_page .container .slider2 .slide4 .content .center_block .slider_statistic .slide .slide_content .money p {
+                    font: 0.9em "HelveticaNeueCyrMedium";
+                    color: #fff;
+                    white-space: nowrap; }
+                #last_page .container .slider2 .slide4 .content .center_block .slider_statistic .slide .slide_content .avards {
+                  display: -webkit-box;
+                  display: -webkit-flex;
+                  display: -ms-flexbox;
+                  display: flex;
+                  -webkit-box-pack: center;
+                  -webkit-justify-content: center;
+                      -ms-flex-pack: center;
+                          justify-content: center;
+                  width: 25%; }
