--- a/portfolio/CSA/app/scss/last.scss
+++ b/portfolio/CSA/app/scss/last.scss
@@ -1,117 +1,435 @@
 #last_page {
-	position: relative;
-	.active_bg {
-      position: absolute;
-      height: 100%;
-      width: 600%;
-      top: 0;
-      left: 0;
-      background: url(../img/animate_bg_last.jpg) no-repeat center center;
-      background-size: cover;
-      transition: .3s;
-	}
-	.custom_dots {
-		position: absolute;
-		bottom: 20px;
-		width: 100%;
-		span {
-			position: absolute;
-			font: 1.8em "HelveticaNeueCyrRoman";
-			color: #f4ea48;
-		}
-		.span_left {
-			left: -425%;
-		}
-		.span_right {
-			right: -425%;
-		}
-		ul {
-			display: flex;
-			list-style: none;
-			justify-content: center;
-			margin: 0 auto;
-			width: 270px;
-			padding: 0;
-			position: relative;
-			li {
-				width: 31px;
-				height: 19px;
-				background: url(../img/bg_dots.png) no-repeat;
-				background-position: 0px 0;
-				background-size: cover;
-				display: flex;
-				align-items: center;
-				margin: 0 6px;
-				cursor: pointer;
-				span {
-					display: block;
-					border-radius: 50%;
-					width: 13px;
-					height: 13px;
-					margin-left: 9px;
-					background: transparent;
-				}
-			}
-			.active_dot {
-					span {
-						background: #f4ea48;
-					}
-				}
-		}
-	}
-	.container {
-		height: 100vh;
-		position: relative;
-		padding: 0;
-		display: flex;
-		justify-content: center;
-		align-items: center;
-		.slider_content {
-			width: 100%;
-			position: relative;
-
-		}
-		.slider2 {
-			padding-top: 20px;
-			.slide {
-				margin: 0 15px;
-				height: 500px;
-				background: #dddddd;
-				position: relative;
-				outline: none;
-				p {
-					color: #000;
-					font-size: 10em;
-					text-align: center;
-				}
-			}
-			.slide1 {
-				position: relative;
-				span {
-				position: absolute;
-				display: block;
-				width: 40px;
-				height: 100%;
-				cursor: pointer;
-				transition: .1s;
-			}
-			.arrow_left_slide1 {
-				 left: 0;
-				 background: url(../img/arrow_left.png) no-repeat center center;
-				 background-color: rgba(0, 0, 0, 0.3);
-				 &:hover {
-				 	background-color: rgba(0, 0, 0, 0.5);
-				 }
-			}
-			.arrow_right_slide1 {
-				right: 0;
-				background: url(../img/arrow_right.png) no-repeat center center;
-				 background-color: rgba(0, 0, 0, 0.3);
-				 &:hover {
-				 	background-color: rgba(0, 0, 0, 0.5);
-				 }
-			}
-			}
-		}
-	}
+    position: relative;
+    .active_bg {
+        position: absolute;
+        height: 100%;
+        width: 600%;
+        top: 0;
+        left: 0;
+        background: url(../img/animate_bg_last.jpg) no-repeat center center;
+        background-size: cover;
+        transition: .3s;
+    }
+    .custom_dots {
+        position: absolute;
+        bottom: 20px;
+        width: 100%;
+        span {
+            position: absolute;
+            font: 1.8em "HelveticaNeueCyrRoman";
+            color: #f4ea48;
+        }
+        .span_left {
+            left: -425%;
+        }
+        .span_right {
+            right: -425%;
+        }
+        ul {
+            display: flex;
+            list-style: none;
+            justify-content: center;
+            margin: 0 auto;
+            width: 270px;
+            padding: 0;
+            position: relative;
+            li {
+                width: 31px;
+                height: 19px;
+                background: url(../img/bg_dots.png) no-repeat;
+                background-position: 0px 0;
+                background-size: cover;
+                display: flex;
+                align-items: center;
+                margin: 0 6px;
+                cursor: pointer;
+                span {
+                    display: block;
+                    border-radius: 50%;
+                    width: 13px;
+                    height: 13px;
+                    margin-left: 9px;
+                    background: transparent;
+                }
+            }
+            .active_dot {
+                span {
+                    background: #f4ea48;
+                }
+            }
+        }
+    }
+    .container {
+        height: 100vh;
+        position: relative;
+        padding: 0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        .slider_content {
+            width: 100%;
+            position: relative;
+        }
+        .slider2 {
+            padding-top: 20px;
+            .slide {
+                margin: 0 15px;
+                height: 500px;
+                position: relative;
+                outline: none;
+            }
+            .slide1 {
+                position: relative;
+                span {
+                    position: absolute;
+                    display: block;
+                    width: 40px;
+                    height: 100%;
+                    cursor: pointer;
+                    transition: .1s;
+                    z-index: 2;
+                }
+                .arrow_left_slide1 {
+                    left: 0;
+                    background: url(../img/arrow_left.png) no-repeat center center;
+                    background-color: rgba(0, 0, 0, 0.5);
+                    &:hover {
+                        background-color: rgba(0, 0, 0, 0.7);
+                    }
+                }
+                .arrow_right_slide1 {
+                    right: 0;
+                    background: url(../img/arrow_right.png) no-repeat center center;
+                    background-color: rgba(0, 0, 0, 0.5);
+                    &:hover {
+                        background-color: rgba(0, 0, 0, 0.7);
+                    }
+                }
+                .bottom {
+                    position: absolute;
+                    bottom: 0;
+                    left: 40px;
+                    cursor: default;
+                    width: calc(100% - 80px);
+                    height: 64px;
+                    background-color: rgba(0, 0, 0, 0.5);
+                    display: flex;
+                    justify-content: space-between;
+                    align-items: center;
+                    .left {
+                        font: 1.2em "HelveticaNeueCyrBold";
+                        color: #fff;
+                    }
+                    img {
+                        width: 40px;
+                        height: 40px;
+                        position: absolute;
+                        left: 50%;
+                        transform: translateX(-50%);
+                    }
+                    .right {
+                        font: 1.2em "HelveticaNeueCyrMedium";
+                        color: #fff;
+                    }
+                }
+                .bottom_line {
+                    position: absolute;
+                    width: 100%;
+                    bottom: 0;
+                    left: 0;
+                    height: 3px;
+                    background: #f5ed4a;
+                }
+                .slider_news {
+                    .slide {
+                        margin: 0;
+                        background: url(../img/Bg_news_block.jpg) no-repeat center center;
+                        background-size: cover;
+                        a {
+                            display: block;
+                            width: 100%;
+                            outline: none;
+                            height: 100%;
+                            font: 3.6em "HelveticaNeueCyrBold";
+                            color: #fff;
+                            text-decoration: none;
+                            display: flex;
+                            align-items: flex-end;
+                            justify-content: flex-end;
+                            h6 {
+                                text-align: right;
+                                padding-right: 55px;
+                                padding-bottom: 79px;
+                                margin: 0;
+                                strong {
+                                    color: #f4ea48;
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+            .slide3 {
+                display: flex;
+                flex-direction: column;
+                justify-content: space-between;
+                .banner {
+                    outline: none;
+                    width: 100%;
+                    height: 30%;
+                    position: relative;
+                    a {
+                        display: block;
+                        width: 100%;
+                        height: 100%;
+                        background: url(../img/Block3_banner.jpg) no-repeat center center;
+                        background-size: cover;
+                        outline: none;
+                    }
+                    .title {
+                        position: absolute;
+                        left: 0;
+                        top: 0;
+                        height: 100%;
+                        width: 15%;
+                        background: rgba(0, 0, 0, 0.8);
+                        display: flex;
+                        flex-direction: column;
+                        align-items: center;
+                        justify-content: center;
+                        .calc {
+                            display: block;
+                            width: 80%;
+                            height: 40px;
+                            background: url(../img/calc.png) no-repeat center center;
+                            background-size: contain;
+                        }
+                        img {
+                            width: 40px;
+                            height: 40px;
+                        }
+                        .top {
+                            font: 1.4em "HelveticaNeueCyrMedium";
+                            color: #f4ea48;
+                            margin: 0;
+                            padding: 15px 0;
+                        }
+                        .bottom {
+                            font: 2.2em "HelveticaNeueCyrMedium";
+                            color: #fff;
+                            margin: 0;
+                        }
+                    }
+                }
+                .slider3 {
+                    margin: 0 -15px;
+                    .slide {
+                        height: 335px;
+                        overflow: hidden;
+                    }
+                    .var1,
+                    .var2 {
+                        .img {
+                            height: 50%;
+                            position: relative;
+                            img {
+                                height: 100%;
+                                min-width: 100%;
+                                width: auto;
+                                position: absolute;
+                                left: 50%;
+                                transform: translateX(-50%);
+                            }
+                        }
+                        .txt {
+                            height: 50%;
+                            background: rgba(0, 0, 0, 0.7);
+                            position: relative;
+                            p {
+                            	text-align: center;
+                            }
+                            h6 {
+                                font: 1.5em "HelveticaNeueCyrRoman";
+                                margin: 0;
+                                text-transform: uppercase;
+                                text-align: center;
+                                color: #fff;
+                                padding-top: 0.6em;
+                                strong {
+                                    font-family: "HelveticaNeueCyrBold";
+                                }
+                            }
+                            .first {
+                                font: 1.2em "HelveticaNeueCyrMedium";
+                                color: #f4ea48;
+                                text-transform: uppercase;
+                                margin: 0;
+                                padding: 0.5em 0;
+                            }
+                            .title {
+                                font: 1.2em "HelveticaNeueCyrMedium";
+                                color: #f4ea48;
+                                margin: 0;
+                            }
+                            .desc {
+                                font: 1.4em "HelveticaNeueCyrMedium";
+                                color: #fff;
+                                margin: 0;
+                                text-transform: uppercase;
+                                padding-bottom: 0.5em;
+                            }
+                            .line {
+                                display: block;
+                                height: 3px;
+                                position: absolute;
+                                width: 100%;
+                                background: #f4ea48;
+                                bottom: 0;
+                            }
+                        }
+                    }
+                    .var2 {
+                        .txt {
+                            h6 {
+                                padding-top: 0.9em;
+                                padding-bottom: 0.7em;
+                            }
+                        }
+                    }
+                }
+            }
+            .slide4 {
+            	.content {
+            		display: flex;
+            		height: 100%;
+            		justify-content: space-between;
+            		.left_block, .right_block {
+                     width: 28%;
+                     background: #fff;
+                     height: 100%;
+            		}
+            		.center_block	{
+                    width: 40%;
+                    height: 100%;
+                    h5 {
+                    	font: 3em "HelveticaNeueCyrBold";
+                    	color: #fff;
+                    	margin: 0;
+                    	text-align: center;
+                    	padding-bottom: 0.3em;
+                    }
+                    .date {
+                    	font: 1.2em "HelveticaNeueCyrMedium";
+                    	color: #f5ed4a;
+                    	margin: 0;
+                    	padding-bottom: 1em;
+                    	text-align: center;
+                    }
+                    .head {
+                    	position: relative;
+                    	display: flex;
+                    	height: 30px;
+                    	align-items: center;
+                    	.option {
+                    		font: 1em "HelveticaNeueCyrMedium";
+                    		color: #f5ed4a;
+                    		text-transform: uppercase;
+                    		cursor: pointer;
+                    		text-align: center;
+                    	}
+                    	.option1 {
+                    		width: 15%;
+                    	}
+                    	.option2 {
+                    		width: 25%;
+                    	}
+                      .option3 {
+                    		width: 10%;
+                    	}
+                    	.option5, .option4 {
+                    		width: 25%;
+                    	}
+                    	.line {
+                    		display: block;
+                    		height: 3px; 
+                    		width: 100%;
+                    		position: absolute;
+                    		background: #f5ed4a;
+                    		bottom: 0;
+                    	}
+                    }
+                    .arrow_bottom {
+                    	position: absolute;
+                    	bottom: 0;
+                    	cursor: pointer;
+                    	display: block;
+                    	background: url(../img/arrow_bottom.png);
+                    	width: 32px;
+                    	height: 17px;
+                    	left: 50%;
+                    	transform: translateX(-50%);
+                    }
+                    .slider_statistic {
+                    	margin: 0 -15px;
+                        .slide {
+                              border-top: 1px solid #fff;
+                              height: 40px;
+                              box-sizing: border-box;
+                              margin: -1px 15px;
+                              display: flex;
+                              align-items: center;
+                              .slide_content {
+                              	display: flex;
+                              	align-items: center;
+                              	width: 100%;
+                              	  .number {
+                              	  	display: flex;
+                              	  	justify-content: center;
+                              	  	width: 15%;
+                              	  	p {
+                              	  		font: 0.9em "HelveticaNeueCyrMedium";
+                              	  	color: #fff;
+                              	  	}
+                              	  }
+                              	  .team {
+                              	  	display: flex;
+                              	  	justify-content: center;
+                              	  	width: 25%;
+                              	  	p {
+                              	  		font: 0.9em "HelveticaNeueCyrBold";
+                              	  		color: #fff;
+                              	  		text-transform: uppercase;
+                              	  		white-space: nowrap;
+                              	  		padding-left: 10px;
+                              	  	}
+                              	  }
+                              	  .game {
+                              	  	display: flex;
+                              	  	justify-content: center;
+                              	  	width: 10%;
+                              	  	img{}
+                              	  }
+                              	  .money {
+                              	  	display: flex;
+                              	  	justify-content: center;
+                              	  	width: 25%;
+                              	  	p {
+                              	  		font: 0.9em "HelveticaNeueCyrMedium";
+                              	  		color: #fff;
+                              	  		white-space: nowrap;
+                              	  	}
+                              	  }
+                              	  .avards {
+                              	  	display: flex;
+                              	  	justify-content: center;
+                              	  	width: 25%;
+                              	  }
+                              }
+                        }
+                    }
+            		}
+            	}
+            }
+        }
+    }
 }
