--- a/portfolio/Barbershop/app/css/common.css
+++ b/portfolio/Barbershop/app/css/common.css
@@ -81,7 +81,7 @@ p {
   width: -webkit-calc(100% - 30px);
   width: calc(100% - 30px);
   z-index: 2;
-  height: 100%;
+  height: 100vh;
   left: 15px; }
   .bg_topgun .bg {
     width: 100%;
