--- a/portfolio/Barbershop/app/scss/common.scss
+++ b/portfolio/Barbershop/app/scss/common.scss
@@ -55,7 +55,7 @@ p {
     position: absolute;
     width: calc(100% - 30px);
     z-index: 2;
-    height: 100%;
+    height: 100vh;
     left: 15px;
     .bg {
         width: 100%;
