--- a/portfolio/Barbershop/app/scss/dop.scss
+++ b/portfolio/Barbershop/app/scss/dop.scss
@@ -6,7 +6,7 @@
 
 .bg_page_dop {
     width: 100%;
-    height: 100%;
+    height: 100vh;
     position: absolute;
     background: url(../img/bg_dop_page.jpg) no-repeat center center;
     background-size: cover;
