--- a/portfolio/Barbershop/app/css/common.css
+++ b/portfolio/Barbershop/app/css/common.css
@@ -81,7 +81,7 @@ p {
   width: -webkit-calc(100% - 30px);
   width: calc(100% - 30px);
   z-index: 2;
-  height: 100vh;
+  height: 100%;
   left: 15px; }
   .bg_topgun .bg {
     width: 100%;
@@ -91,7 +91,8 @@ p {
             background-size: contain; }
 
 .bg_topgun_active {
-  position: fixed !important; }
+  position: fixed !important;
+  height: 100vh !important; }
 
 .nav-btn {
   display: none;
