--- a/portfolio/Barbershop/app/scss/common.scss
+++ b/portfolio/Barbershop/app/scss/common.scss
@@ -55,7 +55,7 @@ p {
     position: absolute;
     width: calc(100% - 30px);
     z-index: 2;
-    height: 100vh;
+    height: 100%;
     left: 15px;
     .bg {
         width: 100%;
@@ -67,6 +67,7 @@ p {
 
 .bg_topgun_active {
     position: fixed !important;
+    height: 100vh !important;
 }
 
 .nav-btn {
